feat: added script for creating github release (CMC-1162) (#2)

--- a/charts/unspec-service/values.preview.template.yaml
+++ b/charts/unspec-service/values.preview.template.yaml
@@ -4,7 +4,9 @@ tags:
 postgresql:
   enabled: true
   image:
-    tag: '11.3.0'
+    registry: hmctspublic.azurecr.io
+    repository: imported/postgres
+    tag: '11.3'
   resources:
     requests:
       cpu: 25m
@@ -15,14 +17,16 @@ postgresql:
       CREATE DATABASE "definition-store" WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
       CREATE DATABASE "user-profile" WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
       CREATE DATABASE "camunda" WITH OWNER = hmcts ENCODING = 'UTF-8' CONNECTION LIMIT = -1;
-
+  securityContext:
+    runAsUser: 0
   postgresqlUsername: hmcts
   postgresqlPassword: hmcts
   persistence:
     enabled: false
 
 java:
-  image: ${IMAGE_NAME}
+  applicationPort: 4000
+  image: 'hmctspublic.azurecr.io/civil-damages/service:latest'
   ingressHost: ${SERVICE_FQDN}
   keyVaults:
     unspec:
@@ -40,19 +44,36 @@ java:
         - robotics-notification-recipient
         - launch-darkly-sdk-key
   environment:
-    CORE_CASE_DATA_API_URL: http://${SERVICE_NAME}-ccd-data-store-api
+    IDAM_CLIENT_ID: unspec-service
+    IDAM_CLIENT_REDIRECT_URI: https://civil-damages-ccd-definition-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/oauth2/callback
+    IDAM_API_URL: https://idam-api.{{ .Values.global.environment }}.platform.hmcts.net
+    IDAM_WEB_URL: https://idam-web-public.{{ .Values.global.environment }}.platform.hmcts.net
+    IDAM_S2S_AUTH_URL: http://rpe-service-auth-provider-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
+    MANAGE_CASE_UI_BASE_URL: https://manage-case.{{ .Values.global.environment }}.platform.hmcts.net
+    SPRING_SECURITY_ENABLED: true
+    CMC_DB_PORT: 5432
+    SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUERURI: https://forgerock-am.service.core-compute-idam-{{ .Values.global.environment }}.internal:8443/openam/oauth2/hmcts
+    SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWKSETURI: https://idam-api.{{ .Values.global.environment }}.platform.hmcts.net/o/jwks
+    AUTH_IDAM_CLIENT_BASEURL: https://idam-api.{{ .Values.global.environment }}.platform.hmcts.net
+    AUTH_PROVIDER_SERVICE_CLIENT_BASEURL: http://rpe-service-auth-provider-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
     OIDC_ISSUER: https://forgerock-am.service.core-compute-idam-aat2.internal:8443/openam/oauth2/realms/root/realms/hmcts
+    TESTING_SUPPORT_ENABLED: true
+    FEES_API_URL: http://fees-register-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
+    PAYMENTS_API_URL: http://payment-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
+    DOCMOSIS_TORNADO_URL: https://docmosis-development.platform.hmcts.net
+    DOCUMENT_MANAGEMENT_URL: http://dm-store-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
+    SPRING_CLOUD_BOOTSTRAP_ENABLED: true
+    RD_PROFESSIONAL_API_URL: http://rd-professional-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal
+    LAUNCH_DARKLY_ENV: ${SERVICE_FQDN}
+    CORE_CASE_DATA_API_URL: http://${SERVICE_NAME}-ccd-data-store-api
     CMC_DB_HOST: ${SERVICE_NAME}-postgresql
+    CMC_DB_CONNECTION_OPTIONS: '?sslmode=allow'
     CMC_DB_USERNAME: hmcts
     CMC_DB_PASSWORD: hmcts
-    CMC_DB_CONNECTION_OPTIONS: '?sslmode=allow'
     REFERENCE_DATABASE_MIGRATION: true
     FEIGN_CLIENT_CONFIG_REMOTERUNTIMESERVICE_URL: http://camunda-${SERVICE_FQDN}/engine-rest/
     FEIGN_CLIENT_CONFIG_REMOTEEXTERNALTASKSERVICE_URL: http://camunda-${SERVICE_FQDN}/engine-rest/
     FEIGN_CLIENT_CONFIG_REMOTEREPOSITORYSERVICE_URL: http://camunda-${SERVICE_FQDN}/engine-rest/
-    TESTING_SUPPORT_ENABLED: true
-    POLLING_EVENT_EMITTER_ENABLED: false
-    LAUNCH_DARKLY_ENV: ${SERVICE_FQDN}
 
 idam-pr:
   releaseNameOverride: ${SERVICE_NAME}-xui-idam-pr
