--- a/build.gradle
+++ b/build.gradle
@@ -160,24 +160,12 @@ task integration(type: Test) {
   testLogging.showStandardStreams = false
 }
 
-task contract(type: Test) {
-  useJUnitPlatform()
-  description = "Runs pact contract tests"
-  group = "Verification"
-  testClassesDirs = sourceSets.contractTest.output.classesDirs
-  classpath = sourceSets.contractTest.runtimeClasspath
-}
-
 task installDependencies(type: Exec, description: 'Installs Yarn dependencies.') {
   commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', '--silent', 'install'
 }
 
 task checkDependenciesIntegrity(type: Exec, description: 'Checks integrity of Yarn dependencies.') {
   commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', '--silent', 'check', '--integrity'
-}
-
-task lintUserInterfaceTests(type: Exec, description: 'Runs linting of E2E tests.') {
-  commandLine '/usr/bin/yarn', '--silent', 'lint'
 }
 
 task awaitApplicationReadiness(type: Exec, description: 'Awaits until application is ready.') {
@@ -189,12 +177,6 @@ task runSmokeTests(type: Exec, description: 'Runs smoke tests.') {
 }
 
 task runFunctionalTests(type: Exec, description: 'Runs functional tests.') {
-  onlyIf(new Spec<Task>() {
-    boolean isSatisfiedBy(Task task) {
-      String skipTestsEnvironmentVariable = System.env.SKIP_FUNCTIONAL_TESTS
-      return skipTestsEnvironmentVariable == null || skipTestsEnvironmentVariable == 'false'
-    }
-  })
   commandLine '/usr/bin/yarn', '--silent', 'test:functional'
 }
 
@@ -206,21 +188,20 @@ def inStrictOrder(Task... tasks) {
 }
 
 task smoke(description: 'Runs the smoke tests.') {
-  dependsOn(inStrictOrder(awaitApplicationReadiness, installDependencies, checkDependenciesIntegrity, lintUserInterfaceTests, runSmokeTests))
+  dependsOn(inStrictOrder(awaitApplicationReadiness, installDependencies, checkDependenciesIntegrity, runSmokeTests))
 }
 
 task functional(description: 'Runs the functional tests.') {
-  dependsOn(inStrictOrder(awaitApplicationReadiness, installDependencies, checkDependenciesIntegrity, lintUserInterfaceTests, runFunctionalTests))
+  dependsOn(inStrictOrder(awaitApplicationReadiness, installDependencies, checkDependenciesIntegrity, runFunctionalTests))
 }
 
 project.tasks['sonarqube'].dependsOn test, integration, jacocoTestReport
 
 sonarqube {
   properties {
-    property "sonar.projectName", "UNSPEC :: service"
-    property "sonar.projectKey", "unspec-service"
+    property "sonar.projectName", "UNSPEC :: civil-damages-camunda-bpmn-definition"
+    property "sonar.projectKey", "civil-damages-camunda-bpmn-definition"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
-    property "sonar.coverage.exclusions", "**/model/**, **/config/**/*Configuration.java, **/testingsupport/**, **/*ExternalTaskListener.java, **/stereotypes/**, **/*Exception.java"
     property "sonar.host.url", "https://sonar.reform.hmcts.net/"
   }
 }
@@ -264,7 +245,6 @@ ext.libraries = [
 ]
 
 dependencies {
-  implementation project(':sendgrid-client')
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
   implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
@@ -345,42 +325,19 @@ dependencies {
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
 
-  testImplementation group: 'org.camunda.bpm.extension.springboot', name: 'camunda-bpm-spring-boot-starter-test', version: '2.2.0'
-
-  testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
-
-  testImplementation group: 'io.rest-assured', name: 'rest-assured', {
-    exclude group: 'io.rest-assured', module: 'xml-path'
-  }
-
-  testCompile group: 'org.springframework.statemachine', name: 'spring-statemachine-test', version: versions.springStatemachine
-
-  //pact contract testing
-  contractTestCompile group: 'au.com.dius', name: 'pact-jvm-consumer-junit5_2.12', version: versions.pact
-  contractTestCompile group: 'au.com.dius', name: 'pact-jvm-consumer-java8_2.12', version: versions.pact
-  contractTestCompile group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
-
-  contractTestCompile("org.junit.jupiter:junit-jupiter-api:5.7.0")
-  contractTestRuntime("org.junit.jupiter:junit-jupiter-engine:5.7.0")
-  contractTestImplementation('org.junit.jupiter:junit-jupiter-api:5.3.2')
-
-  contractTestCompile sourceSets.main.runtimeClasspath
-  contractTestCompile sourceSets.test.runtimeClasspath
-
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
 
   functionalTestImplementation sourceSets.main.runtimeClasspath
 
   smokeTestImplementation sourceSets.main.runtimeClasspath
-
 }
 
 mainClassName = 'uk.gov.hmcts.reform.unspec.Application'
 
 bootJar {
   getArchiveFileName().set(provider {
-    'unspec-service.jar'
+    'empty.jar'
   })
 
   manifest {
