--- a/charts/unspec-service/Chart.yaml
+++ b/charts/unspec-service/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-description: A Helm chart for unspec-service App
-name: unspec-service
-home: https://github.com/hmcts/unspec-service
-version: 1.3.10
+description: A Helm chart for civil-damages-camunda-bpmn-definition App
+name: civil-damages-camunda-bpmn-definition
+home: https://github.com/hmcts/civil-damages-camunda-bpmn-definition
+version: 0.0.1
 maintainers:
   - name: HMCTS Unspecified team
 
