feat: disabled managementWeb + pipeline fixes (#4)

--- a/charts/civil-damages-camunda/Chart.yaml
+++ b/charts/civil-damages-camunda/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
-description: A Helm chart for civil-damages-camunda-bpmn-definition App
-name: civil-damages-camunda-bpmn-definition
+description: A Helm chart for civil-damages-camunda App
+name: civil-damages-camunda
 home: https://github.com/hmcts/civil-damages-camunda-bpmn-definition
-version: 0.0.1
+version: 0.0.2
 maintainers:
   - name: HMCTS Unspecified team
 
