--- a/charts/civil-damages-camunda/values.aat.template.yaml
+++ b/charts/civil-damages-camunda/values.aat.template.yaml
@@ -83,7 +83,7 @@ idam-pr:
   enabled: true
   redirect_uris:
     XUI:
-      - http://civil-damages-camunda-xui-staging-aat.service.core-compute-aat.internal/oauth2/callback
+      - https://civil-damages-camunda-xui-staging.aat.platform.hmcts.net/oauth2/callback
 
 xui-webapp:
   enabled: true
@@ -91,7 +91,7 @@ xui-webapp:
     imagePullPolicy: Always
     releaseNameOverride: ${SERVICE_NAME}-xui-webapp
     image: hmctspublic.azurecr.io/xui/webapp:latest
-    ingressHost: civil-damages-camunda-xui-staging-aat.service.core-compute-aat.internal
+    ingressHost: civil-damages-camunda-xui-staging.aat.platform.hmcts.net
     environment:
       HEALTH_CCD_COMPONENT_API: http://${SERVICE_NAME}-ccd-api-gw/health
       HEALTH_CCD_DATA_API: http://${SERVICE_NAME}-ccd-data-store-api/health
