fix: set imagePullPolicy to Always for service pods

--- a/charts/civil-damages-camunda/values.aat.template.yaml
+++ b/charts/civil-damages-camunda/values.aat.template.yaml
@@ -28,6 +28,7 @@ java:
   applicationPort: 4000
   aadIdentityName: unspec
   image: 'hmctspublic.azurecr.io/civil-damages/service:latest'
+  imagePullPolicy: Always
   ingressHost: ${SERVICE_FQDN}
   keyVaults:
     unspec:
@@ -37,6 +38,10 @@ java:
         - microservicekey-unspec-service
         - system-update-user-username
         - system-update-user-password
+        - cross-access-user-username
+        - cross-access-user-password
+        - prd-admin-user-username
+        - prd-admin-user-password
         - AppInsightsInstrumentationKey
         - docmosis-api-key
         - gov-notify-api-key
