--- a/charts/civil-damages-camunda/values.preview.template.yaml
+++ b/charts/civil-damages-camunda/values.preview.template.yaml
@@ -27,6 +27,7 @@ postgresql:
 java:
   applicationPort: 4000
   image: 'hmctspublic.azurecr.io/civil-damages/service:latest'
+  imagePullPolicy: Always
   ingressHost: ${SERVICE_FQDN}
   keyVaults:
     unspec:
