feat: renamed civil damages to civil (CMC-1541)

--- a/charts/civil-camunda/Chart.yaml
+++ b/charts/civil-camunda/Chart.yaml
@@ -1,10 +1,10 @@
 apiVersion: v2
-description: A Helm chart for civil-damages-camunda App
-name: civil-damages-camunda
-home: https://github.com/hmcts/civil-damages-camunda-bpmn-definition
+description: A Helm chart for civil-camunda App
+name: civil-camunda
+home: https://github.com/hmcts/civil-camunda-bpmn-definition
 version: 0.0.4
 maintainers:
-  - name: HMCTS Unspecified team
+  - name: HMCTS Civil team
 
 dependencies:
   - name: java
