--- a/charts/civil-camunda/values.yaml
+++ b/charts/civil-camunda/values.yaml
@@ -15,7 +15,7 @@ camunda-bpm:
 
 java:
   applicationPort: 4000
-  image: 'hmctspublic.azurecr.io/civil-damages/service:latest'
+  image: 'hmctspublic.azurecr.io/civil/service:latest'
   aadIdentityName: unspec
   keyVaults:
     unspec:
