--- a/build.gradle
+++ b/build.gradle
@@ -158,8 +158,8 @@ project.tasks['sonarqube'].dependsOn test, jacocoTestReport
 
 sonarqube {
   properties {
-    property "sonar.projectName", "UNSPEC :: civil-damages-camunda-bpmn-definition"
-    property "sonar.projectKey", "civil-damages-camunda-bpmn-definition"
+    property "sonar.projectName", "CIVIL :: camunda-bpmn-definition"
+    property "sonar.projectKey", "civil-camunda-bpmn-definition"
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
     property "sonar.host.url", "https://sonar.reform.hmcts.net/"
   }
