--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,6 @@ plugins {
   id 'checkstyle'
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
-  id 'org.springframework.boot' version '2.4.5'
   id 'org.owasp.dependencycheck' version '6.1.6'
   id 'com.github.ben-manes.versions' version '0.39.0'
   id 'org.sonarqube' version '3.2.0'
@@ -21,7 +20,6 @@ allprojects {
   apply plugin: 'jacoco'
   apply plugin: 'checkstyle'
   apply plugin: 'io.spring.dependency-management'
-  apply plugin: 'org.springframework.boot'
   apply plugin: 'org.owasp.dependencycheck'
 
   checkstyle {
@@ -62,40 +60,11 @@ allprojects {
 
   dependencyManagement {
     dependencies {
-      dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.68'
       // CVE-2018-10237 - Unbounded memory allocation
-      dependency group: 'org.mybatis', name: 'mybatis', version: '3.5.7'
+      dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.68'
       // CVE-2020-26945 - Mishandles deserialization of object streams.
-      dependencySet(group: 'com.google.guava', version: '30.1.1-jre') {
-        entry 'guava'
-      }
-      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-common', version: '1.5.10'
-      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk7', version: '1.5.10'
-      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: '1.5.10'
-      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.4.32'
-      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.5.10'
-      // CVE-2021-29425
+      dependency group: 'org.mybatis', name: 'mybatis', version: '3.5.7'
       dependency group: 'commons-io', name: 'commons-io', version: '2.9.0'
-
-      //CVE-2021-22118
-      dependencySet(group: 'org.springframework', version: '5.2.15.RELEASE') {
-        entry 'spring-aop'
-        entry 'spring-aspects'
-        entry 'spring-beans'
-        entry 'spring-context'
-        entry 'spring-context-support'
-        entry 'spring-core'
-        entry 'spring-expression'
-        entry 'spring-jcl'
-        entry 'spring-jdbc'
-        entry 'spring-jms'
-        entry 'spring-messaging'
-        entry 'spring-orm'
-        entry 'spring-test'
-        entry 'spring-tx'
-        entry 'spring-web'
-        entry 'spring-webmvc'
-      }
     }
     imports {
       mavenBom 'org.springframework.cloud:spring-cloud-dependencies:2020.0.3'
@@ -204,10 +173,7 @@ jacocoTestReport.dependsOn {
 
 def versions = [
   junit              : '5.7.2',
-  junitPlatform      : '1.7.2',
-  reformLogging      : '5.1.5',
-  springBoot         : springBoot.class.package.implementationVersion,
-  springfoxSwagger   : '2.9.2',
+  junitPlatform      : '1.7.2'
 ]
 
 ext.libraries = [
@@ -221,20 +187,16 @@ ext.libraries = [
 ]
 
 dependencies {
-  implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
-  implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
   implementation group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '7.15.0'
   implementation group: 'org.camunda.bpm.extension.rest', name: 'camunda-rest-client-spring-boot-starter', version: '0.0.4'
 
   testImplementation libraries.junit5
-  testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test'
   testImplementation group: 'org.camunda.bpm.extension.springboot', name: 'camunda-bpm-spring-boot-starter-test', version: '2.2.0'
   testImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
 }
 
-mainClassName = 'uk.gov.hmcts.reform.civil.Application'
 
-bootJar {
+jar {
   getArchiveFileName().set(provider {
     'empty.jar'
   })
