--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,9 @@ plugins {
   id 'jacoco'
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'org.springframework.boot' version '2.4.5'
-  id 'org.owasp.dependencycheck' version '6.1.6'
+  id 'org.owasp.dependencycheck' version '6.2.2'
   id 'com.github.ben-manes.versions' version '0.39.0'
-  id 'org.sonarqube' version '3.2.0'
+  id 'org.sonarqube' version '3.3'
 }
 
 group = 'uk.gov.hmcts.reform'
@@ -62,7 +62,7 @@ allprojects {
 
   dependencyManagement {
     dependencies {
-      dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.68'
+      dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.69'
       // CVE-2018-10237 - Unbounded memory allocation
       dependency group: 'org.mybatis', name: 'mybatis', version: '3.5.7'
       // CVE-2020-26945 - Mishandles deserialization of object streams.
@@ -72,13 +72,13 @@ allprojects {
       dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-common', version: '1.5.10'
       dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk7', version: '1.5.10'
       dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: '1.5.10'
-      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.4.32'
+      dependency group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib', version: '1.5.10'
       dependency group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: '1.5.10'
       // CVE-2021-29425
       dependency group: 'commons-io', name: 'commons-io', version: '2.9.0'
 
       //CVE-2021-22118
-      dependencySet(group: 'org.springframework', version: '5.2.15.RELEASE') {
+      dependencySet(group: 'org.springframework', version: '5.3.8') {
         entry 'spring-aop'
         entry 'spring-aspects'
         entry 'spring-beans'
