--- a/build.gradle
+++ b/build.gradle
@@ -129,6 +129,10 @@ task runRpaHandOffTests(type: Exec, description: 'Runs functional tests.') {
   commandLine '/usr/bin/yarn', '--silent', 'test:rpa'
 }
 
+task runNightlyMultipartyTests(type: Exec, description: 'Runs additional multiparty nightly tests.') {
+  commandLine '/usr/bin/yarn', '--silent', 'test:nightly-multiparty'
+}
+
 def inStrictOrder(Task... tasks) {
   for (int i = 0; i < tasks.size() - 1; i++) {
     tasks[i + 1].mustRunAfter(tasks[i])
