Combine the dependency prs

--- a/.github/workflows/combine-prs.yml
+++ b/.github/workflows/combine-prs.yml
@@ -52,7 +52,9 @@ jobs:
             for (const pull of pulls) {
               const branch = pull['head']['ref'];
               console.log('Pull for branch: ' + branch);
-              if (branch.startsWith('${{env.branchPrefix}}')) {
+              if (branch.startsWith('${{env.branchPrefix}}')
+                  && !(branch.startsWith('dependabot/gradle/org.springframework-spring-core-5.3.19')
+            ) {
                 console.log('Branch matched : ' + branch);
                 statusOK = true;
                 console.log('Checking labels: ' + branch);
