Adding - robotics-notification-recipient-spec in values

--- a/charts/civil-camunda/values.yaml
+++ b/charts/civil-camunda/values.yaml
@@ -31,4 +31,5 @@ java:
         - sendgrid-api-key
         - robotics-notification-sender
         - robotics-notification-recipient
+        - robotics-notification-recipient-spec
         - launch-darkly-sdk-key
