added alias: launch-darkly-sdk-key

--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -49,7 +49,7 @@ java:
         - robotics-notification-recipient
         - robotics-notification-recipient-spec
         - name: launch-darkly-sdk-key-non-prod
-        - launch-darkly-sdk-key
+          alias: launch-darkly-sdk-key
         - robotics-notification-multipartyrecipient
         - ordnance-survey-api-key
   environment:
