CIV-3322 Add key vaults

--- a/charts/civil-camunda/values.yaml
+++ b/charts/civil-camunda/values.yaml
@@ -35,3 +35,4 @@ java:
         - robotics-notification-recipient
         - robotics-notification-recipient-spec
         - launch-darkly-sdk-key
+        - notification-caseworker-spec-receiver
