--- a/charts/civil-camunda/values.aat.template.yaml
+++ b/charts/civil-camunda/values.aat.template.yaml
@@ -52,6 +52,7 @@ java:
         - robotics-notification-recipient-spec
         - launch-darkly-sdk-key
         - robotics-notification-multipartyrecipient
+        - notification-caseworker-spec-receiver
   environment:
     IDAM_CLIENT_ID: civil-service
     IDAM_CLIENT_REDIRECT_URI: https://civil-camunda-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/oauth2/callback
