CIV-6413: Chagnes for test branch

--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -25,7 +25,7 @@ postgresql:
 
 java:
   applicationPort: 4000
-  image: 'hmctspublic.azurecr.io/civil/service:latest'
+  image: 'hmctspublic.azurecr.io/civil/service:pr-1985'
   imagePullPolicy: Always
   ingressHost: ${SERVICE_FQDN}
   keyVaults:
