--- a/charts/civil-camunda/values.aat.template.yaml
+++ b/charts/civil-camunda/values.aat.template.yaml
@@ -74,6 +74,8 @@ java:
     enabled: true
     releaseNameOverride: ${SERVICE_NAME}-postgresql
     image:
+      registry: hmctspublic.azurecr.io
+      repository: imported/bitnami/postgresql
       tag: '11.6.0'
     primary:
       persistence:
