Check if not renovate before commit

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   lint:
+    if: github.event.user.login != renovate
     runs-on: ubuntu-latest
     steps:
     - uses: deepakputhraya/action-pr-title@master
