--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,9 +12,9 @@
 # This should make it easy to add new rules without breaking existing ones.
 
 # Global rule:
-* @hmcts/civil-admins @civil
+* @hmcts/civil-admins @hmcts/civil
 
 # Infra:
-/charts/** @sampanumar @sankhajuria @filippo-possenti-version1 @akriti-hmcts 
-/infrastructure/** @sampanumar @sankhajuria @filippo-possenti-version1 @akriti-hmcts @chris-pateman
+/charts/** @hmcts/civil-infra-admins @hmcts/civil
+/infrastructure/** @hmcts/civil-infra-admins @hmcts/civil
 
