--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -15,6 +15,6 @@
 * @hmcts/civil-admins @hmcts/civil
 
 # Infra:
-/charts/ @hmcts/civil-infra-admins @hmcts/civil
-/infrastructure/ @hmcts/civil-infra-admins @hmcts/civil
+charts/ @hmcts/civil-infra-admins @hmcts/civil
+infrastructure/ @hmcts/civil-infra-admins @hmcts/civil
 
