--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,9 +12,9 @@
 # This should make it easy to add new rules without breaking existing ones.
 
 # Global rule:
-@hmcts/civil-admins @hmcts/civil
+* @hmcts/civil-admins @hmcts/civil
 
 # Infra:
-charts/ @hmcts/civil-infra-admins @hmcts/civil
-infrastructure/ @hmcts/civil-infra-admins @hmcts/civil
+**/charts/ @hmcts/civil-infra-admins @hmcts/civil
+**/infrastructure/ @hmcts/civil-infra-admins @hmcts/civil
 
