correct action syntax

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,6 @@
 name: Check PR title and project linting
 on:
   pull_request:
-    branches-ignore:
-      - 'renovate/**'
     types:
       - opened
       - reopened
@@ -11,6 +9,7 @@ on:
 
 jobs:
   lint:
+    if: "!contains(github.event.pull_request.head.ref, 'renovate')"
     runs-on: ubuntu-latest
     steps:
     - uses: deepakputhraya/action-pr-title@master
