CIV-7080 Using schedule as dependabot
- Uses the same scheduled day and time as dependabot
- Limits concurrency to mimic what was done in dependabot

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -12,5 +12,7 @@
         "datasource=(?<datasource>.*?) depName=(?<depName>.*?)( versioning=(?<versioning>.*?))?\\sARG .*?_VERSION=(?<currentValue>.*)\\s"
       ]
     }
-  ]
+  ],
+  "schedule": ["after 4am on sunday"],
+  "prConcurrentLimit": 20
 }
