Enable api tests

--- a/charts/civil-camunda/values.yaml
+++ b/charts/civil-camunda/values.yaml
@@ -33,3 +33,5 @@ java:
         - robotics-notification-recipient-spec
         - launch-darkly-sdk-key
         - notification-caseworker-spec-receiver
+        - ordnance-survey-api-key
+        - robotics-notification-multipartyrecipient
