updated the url root with var names

--- a/charts/civil-camunda/values.preview.template.yaml
+++ b/charts/civil-camunda/values.preview.template.yaml
@@ -70,8 +70,8 @@ java:
     FEIGN_CLIENT_CONFIG_REMOTEREPOSITORYSERVICE_URL: http://${SERVICE_NAME}-camunda/engine-rest/
     STITCHING_API_ENABLED: false
     POLLING_EVENT_EMITTER_ENABLED: false
-    SERVICE_REQUEST_UPDATE: https://civil-camunda-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/service-request-update
-    SERVICE_REQUEST_UPDATE_CLAIM_ISSUED: https://civil-camunda-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/service-request-update-claim-issued
+    SERVICE_REQUEST_UPDATE: ${SERVICE_FQDN}/service-request-update
+    SERVICE_REQUEST_UPDATE_CLAIM_ISSUED: ${SERVICE_NAME}.service.core-compute-{{ .Values.global.environment }}.internal/service-request-update-claim-issued
   postgresql:
     enabled: true
     releaseNameOverride: ${SERVICE_NAME}-postgresql
