increasing data store memory and cpu for aat

--- a/charts/civil-camunda/values.aat.template.yaml
+++ b/charts/civil-camunda/values.aat.template.yaml
@@ -170,7 +170,10 @@ ccd:
   ccd-data-store-api:
     java:
       imagePullPolicy: Always
-      devcpuRequests: 500m
+      devmemoryRequests: 2048Mi
+      devcpuRequests: 1000m
+      devmemoryLimits: 4096Mi
+      devcpuLimits: 2000m
       environment:
         CASE_DOCUMENT_AM_API_ATTACH_DOCUMENT_ENABLED: false
         DATA_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
