CIV-6540: Changes from civil-service

--- a/build.gradle
+++ b/build.gradle
@@ -130,11 +130,11 @@ test {
 }
 
 task installDependencies(type: Exec, description: 'Installs Yarn dependencies.') {
-  commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', '--silent', 'install'
+  commandLine '/usr/bin/yarn', '--mutex', 'network', '--immutable', '--silent', 'install'
 }
 
 task checkDependenciesIntegrity(type: Exec, description: 'Checks integrity of Yarn dependencies.') {
-  commandLine '/usr/bin/yarn', '--mutex', 'network', '--frozen-lockfile', '--silent', 'check', '--integrity'
+  commandLine '/usr/bin/yarn', '--mutex', 'network', '--immutable', '--silent', 'check', '--integrity'
 }
 
 task awaitApplicationReadiness(type: Exec, description: 'Awaits until application is ready.') {
